# orion

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  install.sh
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml  selfhosted-test.yml
apps/orion-cli/: Cargo.toml
apps/orion-cli/src/: main.rs
apps/orion-desktop/: index.html  package-lock.json  package.json  tailwind.config.js
apps/orion-desktop/src/: App.tsx  i18n.tsx  index.css  main.tsx
apps/orion-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/orion-desktop/src-tauri/capabilities/: default.json
apps/orion-desktop/src-tauri/icons/: icon.icns
apps/orion-desktop/src-tauri/src/: main.rs
apps/orion-desktop/src/components/: ChatHeader.tsx  ChatView.tsx  InputArea.tsx  MCPServerView.tsx  MessageList.tsx  ModelPicker.tsx  ModelsView.tsx  OnboardingOverlay.tsx  PermissionDialog.tsx  ProviderConnect.tsx  ProvidersView.tsx  ResizeHandles.tsx  SettingsView.tsx  Sidebar.tsx  TitleBar.tsx
apps/orion-desktop/src/styles/: chat.css  onboarding.css  permission.css  sidebar.css  titlebar.css
apps/orion-server/: Cargo.toml
apps/orion-server/src/: main.rs
apps/orion-tui/: Cargo.toml
apps/orion-tui/src/: main.rs
apps/orion-tui/src/app/: event.rs  mod.rs  update.rs
apps/orion-tui/src/ui/: chat.rs  input.rs  mod.rs  sidebar.rs  statusbar.rs
apps/orion-ui/: astro.config.mjs  package-lock.json  package.json
apps/orion-ui/src/components/: ChatIsland.astro  MemoryPanel.astro  ServersPanel.astro  SettingsPanel.astro
apps/orion-ui/src/layouts/: App.astro
apps/orion-ui/src/lib/: api.ts  chat.ts  theme.ts
apps/orion-ui/src/pages/: index.astro
apps/orion-ui/src/styles/: global.css
crates/orion-core/: Cargo.toml
crates/orion-core/acp-registry/: agent.json
crates/orion-core/src/: lib.rs  permissions.rs
crates/orion-core/src/acp/: connection.rs  mod.rs  server.rs  sessions.rs  types.rs
crates/orion-core/src/agents/: mod.rs
crates/orion-core/src/config/: mod.rs
crates/orion-core/src/core/: agent.rs  clipboard.rs  compactor.rs  context.rs  dispatch.rs  mod.rs  ratelimit.rs  snapshot.rs  spill.rs
crates/orion-core/src/images/: mod.rs  watcher.rs
crates/orion-core/src/lsp/: client.rs  manager.rs  mod.rs
crates/orion-core/src/mcp/: client.rs  mod.rs  protocol.rs
crates/orion-core/src/memory/: mod.rs  project.rs  store.rs  team.rs
crates/orion-core/src/middleware/: mod.rs  token_optimizer.rs
crates/orion-core/src/models/: catalog.rs  sync.rs
crates/orion-core/src/oauth/: mod.rs
crates/orion-core/src/permissions/: bash_risk.rs  store.rs  trust.rs
crates/orion-core/src/plugins/: hooks.rs  loader.rs  mod.rs
crates/orion-core/src/providers/: anthropic.rs  mod.rs  ollama.rs  openai_compatible.rs  registry.rs  traits.rs
crates/orion-core/src/router/: fallback.rs  selector.rs
crates/orion-core/src/server/: chat.rs  context.rs  mcp.rs  mod.rs  models.rs  providers.rs  sessions.rs  settings.rs  web.rs
crates/orion-core/src/share/: mod.rs
crates/orion-core/src/skills/: mod.rs
crates/orion-core/src/stats/: mod.rs
crates/orion-core/src/tools/: apply_patch.rs  bash.rs  bash_parser.rs  edit.rs  glob.rs  grep.rs  lsp.rs  mod.rs  pty.rs  question.rs  read.rs  skill.rs  task.rs  todowrite.rs  webfetch.rs  websearch.rs  write.rs
crates/orion-core/tests/: acp_smoke_test.rs  catalog_test.rs  memory_test.rs  server_integration_test.rs  token_optimizer_test.rs
docs/: PLAN-best-of-cc-oc.md
src/: lib.rs  main.rs
src/analytics/: ping.rs
src/app/: event.rs  mod.rs
src/config/: defaults.rs
src/core/: agent.rs  commands.rs  memory.rs  mod.rs
src/images/: encoder.rs  watcher.rs
src/mcp/: image.rs  manager.rs  middleware.rs
src/models/: catalog.rs  mod.rs  sync.rs
src/providers/: anthropic.rs  deepseek.rs  groq.rs  minimax.rs  mistral.rs  mod.rs  ollama.rs  openai_compatible.rs  openrouter.rs  perplexity.rs  registry.rs  together.rs  traits.rs
src/router/: fallback.rs  mod.rs  selector.rs
src/ui/: chat.rs  input.rs  mod.rs  sidebar.rs  statusbar.rs  theme.rs
tests/: catalog_test.rs
