[workspace]
resolver = "2"
members = [
    "crates/orion-core",
    "apps/orion-tui",
    "apps/orion-server",
    "apps/orion-cli",
    "apps/orion-desktop/src-tauri",
] 

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.75"
authors = ["ORION Team"]

[workspace.dependencies]
ratatui = { version = "0.26", features = ["serde"] }
crossterm = { version = "0.27", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
image = "0.25"
arboard = "3.4"
notify = "6.1"
uuid = { version = "1.8", features = ["v4"] }
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.19"
parking_lot = "0.12"
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
futures = "0.3"
async-trait = "0.1"
tokio-stream = "0.1"
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
async-stream = "0.3"
globset = "0.4"
walkdir = "2.5"
regex = "1.10"
scraper = "0.27"
url = "2.5"
tree-sitter = "0.24"
tree-sitter-bash = "0.23"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
