[package]
name = "orion"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["ORION Team"]
description = "AI coding agent CLI"

[[bin]]
name = "orion"
path = "src/main.rs"

[dependencies]
orion-core = { path = "../../crates/orion-core" }
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
axum.workspace = true
uuid.workspace = true
chrono.workspace = true