[package]
name = "orion-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "orion-server"
path = "src/main.rs"

[dependencies]
orion-core = { path = "../../crates/orion-core" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
axum.workspace = true
