[package]
name = "orion-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
image.workspace = true
arboard.workspace = true
notify.workspace = true
uuid.workspace = true
dirs.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
indicatif.workspace = true
chrono.workspace = true
toml.workspace = true
futures.workspace = true
async-trait.workspace = true
