[package]
name = "orion-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
tokio-stream.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
image.workspace = true
arboard.workspace = true
notify.workspace = true
uuid.workspace = true
dirs.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
indicatif.workspace = true
chrono.workspace = true
toml.workspace = true
futures.workspace = true
async-trait.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
async-stream.workspace = true
globset.workspace = true
walkdir.workspace = true
regex.workspace = true
scraper.workspace = true
url.workspace = true
tree-sitter.workspace = true
tree-sitter-bash.workspace = true
dashmap = "6"
tokio-util = { version = "0.7", features = ["rt"] }

# API-key storage in the OS keyring — backend is platform-specific.
[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
