[package]
name = "orion-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
orion-core = { path = "../../../crates/orion-core" }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
anyhow.workspace = true
parking_lot.workspace = true
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[[bin]]
name = "orion-desktop"
path = "src/main.rs"
